# rupdf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
benches/: render.rs
benchmarks/: README.md  run_benchmark.py
fixtures/: README.md  all_elements.json  multi_page.json  simple_text.json  stress_test.json
python/rupdf/: __init__.py  __init__.pyi  _rupdf.pyi
python/tests/: __init__.py  conftest.py  test_font_fallback.py  test_interface.py  test_pdf_structure.py
scripts/: demo_pdf.py  generate_test_pdf.py  position_test.py
src/: error.rs  lib.rs  resources.rs  runs.rs  types.rs
src/elements/: barcode.rs  mod.rs  svg.rs
src/pdf/: fonts.rs  mod.rs  writer.rs
