[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rupdf"
version = "0.1.5"
description = "A fast, minimal PDF page renderer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.urls]
Repository = "https://github.com/stringking/rupdf"
Issues = "https://github.com/stringking/rupdf/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rupdf._rupdf"

[project.optional-dependencies]
dev = ["pytest>=7.0", "reportlab>=4.0"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
